Adding a bunch of reaction anims

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,13 @@ BartenderTales/Assets/Prefabs/Bar_Top_Block7\.prefab
 BartenderTales/Assets/Prefabs/Bar_Top_Block7\.prefab\.meta
 
 BartenderTales/Packages/manifest\.json
+
+BartenderTales/Assets/Shaders/Outline\.meta
+
+BartenderTales/Assets/ToonMaybe\.meta
+
+BartenderTales/Assets/ToonMaybe/Materials\.meta
+
+BartenderTales/Assets/ToonMaybe/Mesh\.meta
+
+BartenderTales/Assets/ToonMaybe/Shaders\.meta
