Auto stash before merge of "master" and "origin/master"

--- a/.gitignore
+++ b/.gitignore
@@ -94,3 +94,4 @@ BartenderTales/Assets/ToonMaybe/Materials\.meta
 BartenderTales/Assets/ToonMaybe/Mesh\.meta
 
 BartenderTales/Assets/ToonMaybe/Shaders\.meta
+BartenderTales
